[build-system]
requires = ["flit_core >=3.2,<4",
            "setuptools>=42",
            "wheel",
            "numpy", 
            "scikit-learn", 
            "torch", 
            "plotly", 
            "matplotlib"]
build-backend = "flit_core.buildapi"

[project]
name = "relAI"
authors = [{name = "Lorenzo", email = "graziella@lumache"}]
dynamic = ["version", "description"]
